implemented reddit pixel.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -91,6 +91,13 @@
 
         gtag('config', 'G-QHR9W0GZ8R');
         </script>
+        
+        <!-- Reddit Pixel -->
+        <script>
+        !function(w,d){if(!w.rdt){var p=w.rdt=function(){p.sendEvent?p.sendEvent.apply(p,arguments):p.callQueue.push(arguments)};p.callQueue=[];var t=d.createElement("script");t.src="https://www.redditstatic.com/ads/pixel.js",t.async=!0;var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}}(window,document);
+        rdt('init','a2_i2eauxejgsxp');
+        rdt('track', 'PageVisit');
+        </script>
         <script>
             // Only load visual edit scripts when inside an iframe and visual edits are enabled
             if (window.self !== window.top && '%REACT_APP_ENABLE_VISUAL_EDITS%' === 'true') {
